add donate button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,25 @@
 </head>
 
 <body>
-	<span id="copy">Power by Colin (僅支援標準語法，請盡量不要使用IE瀏覽)</span>
+	<span id="copy">Power by Colin (僅支援標準語法，請盡量不要使用IE瀏覽)
+        <!-- PayPal Donate button -->
+        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+            <input type="hidden" name="cmd" value="_s-xclick">
+            <input type="hidden" name="hosted_button_id" value="YL3P2TXPF2GKE">
+            <table>
+                <tr><td><input type="hidden" name="on0" value="Donate">Donate</td></tr><tr><td><select name="os0">
+                                <option value="1">1 $1.00 USD</option>
+                                    <option value="5">5 $5.00 USD</option>
+                                        <option value="10">10 $10.00 USD</option>
+                        </select> </td></tr>
+            </table>
+            <input type="hidden" name="currency_code" value="USD">
+            <input type="image" src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/btn_donate_92x26.png" border="0" name="submit" alt="PayPal Donate">
+            <img alt="" border="0" src="https://www.paypalobjects.com/zh_TW/i/scr/pixel.gif" width="1" height="1">
+        </form>
+
+
+    </span>
     <div id="box_1">
         <span>請點選符石鑲嵌組合(可複選，可省略)</span>
         <div id="box_rune"></div>
