--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <input type="hidden" name="cmd" value="_s-xclick">
             <input type="hidden" name="hosted_button_id" value="YL3P2TXPF2GKE">
             <table>
-                <tr><td><input type="hidden" name="on0" value="Donate">Donate</td></tr><tr><td><select name="os0">
+                <tr><td><input type="hidden" name="on0" value="Donate">如果您喜歡我開發的程式,請提供些微贊助來讓網站更好,謝謝</td></tr><tr><td><select name="os0">
                                 <option value="1">1 $1.00 USD</option>
                                     <option value="5">5 $5.00 USD</option>
                                         <option value="10">10 $10.00 USD</option>
