--- a/index.html
+++ b/index.html
@@ -11,22 +11,11 @@
 <body>
 	<span id="copy">Power by Colin (僅支援標準語法，請盡量不要使用IE瀏覽)
         <!-- PayPal Donate button -->
-        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-            <input type="hidden" name="cmd" value="_s-xclick">
-            <input type="hidden" name="hosted_button_id" value="YL3P2TXPF2GKE">
-            <table>
-                <tr><td><input type="hidden" name="on0" value="Donate">如果您喜歡我開發的程式,請提供些微贊助來讓網站更好,謝謝</td></tr><tr><td><select name="os0">
-                                <option value="1">1 $1.00 USD</option>
-                                    <option value="5">5 $5.00 USD</option>
-                                        <option value="10">10 $10.00 USD</option>
-                        </select> </td></tr>
-            </table>
-            <input type="hidden" name="currency_code" value="USD">
+        <p>如果您喜歡我開發的程式,請提供些微贊助來讓網站更好,謝謝</p>
+        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=53QAHAG6GNDMQ" target="_blank">
+            <img src="https://camo.githubusercontent.com/d5d24e33e2f4b6fe53987419a21b203c03789a8f/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f446f6e6174652d50617950616c2d677265656e2e737667" alt="PayPal donate button" data-canonical-src="https://img.shields.io/badge/Donate-PayPal-green.svg" style="max-width:100%;">
             <input type="image" src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/btn_donate_92x26.png" border="0" name="submit" alt="PayPal Donate">
-            <img alt="" border="0" src="https://www.paypalobjects.com/zh_TW/i/scr/pixel.gif" width="1" height="1">
-        </form>
-
-
+        </a>
     </span>
     <div id="box_1">
         <span>請點選符石鑲嵌組合(可複選，可省略)</span>
