--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=53QAHAG6GNDMQ" target="_blank">
             <input type="image" src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/btn_donate_92x26.png" border="0" name="submit" alt="PayPal Donate">
         </a>
-        <a href="https://p.allpay.com.tw/bMSUQ"><img style="height: 26px; width: auto;" src="https://payment.allpay.com.tw/Content/themes/WebStyle201404/images/allpay.png" /></a>
+        <a href="https://p.allpay.com.tw/a60W0"><img style="height: 26px; width: auto;" src="https://payment.allpay.com.tw/Content/themes/WebStyle201404/images/allpay.png" /></a>
     </span>
     <div id="box_1">
         <span>請點選符石鑲嵌組合(可複選，可省略)</span>
