--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-	<span id="copy">Power by Colin (僅支援標準語法，請盡量不要使用IE瀏覽)
+<span id="copy">Power by Colin - colin1124x@gmail.com
+        (僅支援標準語法，請盡量不要使用IE瀏覽)
         <!-- PayPal Donate button -->
         <p>如果您喜歡我開發的程式,請提供些微贊助來讓網站更好,謝謝</p>
         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=53QAHAG6GNDMQ" target="_blank">
